# lichess-mail-reporter

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  settings.toml
.github/workflows/: release-please.yml  workflow.yml
lichess_mail_reporter/: client.py  config.py  game.py  lichess.py  mail_report.py  user.py
lichess_mail_reporter/resources/: template.html  template.txt
tests/: test_game.py  test_lichess_client.py  test_lichess_stats.py  test_proper_config.py
