[project]
name = "lichess-mail-reporter"
requires-python = ">=3.11"
version = "0.1.0"
description = ""
authors = [{name="Adrian Abreu", email="adrianabreugonzalez@proton.me"}]
readme = "README.md"
dependencies = [
    "requests==2.32.3",
    "berserk==0.13.2",
    "mailtrap==2.0.1",
    "pydantic-settings==2.4.0",
    "pydantic [email]==2.8.2",
    "kaleido==0.2.1",
]

[tool.uv]
dev-dependencies=[
"pytest-mock==3.14.0",
"ruff==0.5.7"
]

[tool.hatch.build.targets.wheel]
packages = ["lichess_mail_reporter"]
